# vkr-grnti-classifier

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py
backend/api/: classify.py  health.py
backend/core/: config.py  dependencies.py
backend/schemas/: requests.py  responses.py
backend/services/: cascade.py  embedder.py  ontology.py
frontend/: app.js  index.html  styles.css
